# refill-optimization

./: .gitignore  README.md  generate_ytd_sankey_counts.py  pyproject.toml
config/: humana_refill_etl_prod_config.yml
scripts/: generate_weekly_report.py  get_never_answered.py  get_nice_data.py  pharmacy_request_report.py  refill_reminder_result_summary.py  scrubbing_distribution.py  under_100_completions_weekly_report.py
utils/: config_utils.py  date_util.py  email_utils.py  fields.py  file_utils.py  nice.py  nice_utils.py  scrubbing.py
utils/reporting/: daily.py  refill_summary.py  weekly.py
